# VGC

JOGLTemplate/: Platformer.java  Quaternion.java
LiamCode/: .#main.cpp  CMakeLists.txt  Character.cpp  Character.h  Charracter.cpp  README  level.cpp  level.h  main  main.c  main.cpp  main.cpp~  main.h  scraps.cpp  types.h
LiamCode/ssplatformer/: Character.h  README  main.h
LiamCode/ssplatformer/gl/: consts.h  level.h  scraps.cpp  types.h
LiamCode/ssplatformer/sdl/: CMakeLists.txt  Character.cpp  Character.h  README  consts.h  main.cpp  main.cpp~  main.h  main.h~
LiamCode/topdown/cc/: README.txt  test  test.cc
LiamCode/topdown/python/: helloworld.py
sdlpractice/: test1.cpp  test1.h  test1_CSurface.cpp  test1_CSurface.h  test1_event.cpp  test1_onInit.cpp
